# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_source_set("sharing_wfd_session_srcs") {
  sanitize = {
    cfi = true
    boundary_sanitize = true
    cfi_cross_dso = true
    debug = false
    ubsan = true
    integer_overflow = true
  }
  include_dirs = [
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/impl/wfd",
    "$SHARING_ROOT_DIR/services/network",
    "$SHARING_ROOT_DIR/services/mediachannel",
    "$SHARING_ROOT_DIR/services/utils",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/frame",
    "$SHARING_ROOT_DIR/services/protocol/rtp",
  ]

  sources = [ "$SHARING_ROOT_DIR/services/impl/wfd/wfd_message.cpp" ]

  configs = [
    "$SHARING_ROOT_DIR/tests:coverage_flags",
    "$SHARING_ROOT_DIR:wifi_display_default_config",
    "$SHARING_ROOT_DIR:wifi_display_feature_flags",
  ]

  deps = [
    "$SHARING_ROOT_DIR/services/agent:sharing_agent_srcs",
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/interaction:sharing_interaction_srcs",
    "$SHARING_ROOT_DIR/services/mediachannel:sharing_media_channel_srcs",
  ]

  if (wifi_display_support_sink) {
    deps += [ "$SHARING_ROOT_DIR/services/sink/impl/wfd:sharing_wfd_sink_session_srcs" ]
  }

  if (wifi_display_support_source) {
    deps += [ "$SHARING_ROOT_DIR/services/source/impl/wfd:sharing_wfd_source_session_srcs" ]
  }

  external_deps = [
    "av_codec:av_codec_client",
    "c_utils:utils",
    "graphic_surface:surface",
    "ipc:ipc_single",
    "hilog:libhilog",
    "media_foundation:media_foundation",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
