# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")
ohos_shared_library("domain_manager") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    ".",
    "//foundation/CastEngine/castengine_wifi_display/services",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/device_kit",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/domain/rpc",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/ipc_codec",
    "//foundation/communication/wifi/wifi/frameworks/native/include",
    "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/",
    "//foundation/communication/ipc/ipc/native/c/ipc/include",
    "//foundation/systemabilitymgr/safwk/services/safwk/include",
    "//utils/native/base/include",
    "//foundation/systemabilitymgr/samgr/interfaces/innerkits/samgr_proxy/include",
  ]
  sources = [ "domain_manager.cpp" ]

  deps = [
    "rpc:domain_rpc_manager",
    "//foundation/CastEngine/castengine_wifi_display/services/interaction/device_kit:dmkit",
  ]

  configs = [ "$SHARING_ROOT_DIR/tests:coverage_flags" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  install_enable = true
  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
