# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

config("ipc_codec_config") {
  cflags = [
    "-frtti",
    "-Wno-c++20-extensions",
  ]
}

ohos_static_library("ipc_codec_srcs") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    ".",
    "//foundation/communication/wifi/wifi/frameworks/native/include",
    "//foundation/communication/wifi/wifi/frameworks/native/interfaces",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include/",
    "//foundation/communication/ipc/ipc/native/c/ipc/include",
    "//foundation/CastEngine/castengine_wifi_display/services",
    "//foundation/CastEngine/castengine_wifi_display/services/common",
  ]

  configs = [ ":ipc_codec_config" ]

  sources = [
    "ipc_codec.cpp",
    "ipc_msg_decoder.cpp",
    "ipc_msg_encoder.cpp",
  ]
  external_deps = [
    "c_utils:utils",
    "graphic_surface:surface",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
