# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_shared_library("sharing_ts") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "include",
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/extend/mpeg/include",
  ]

  sources = [
    "mpeg_ts_demuxer.cpp",
    "mpeg_ts_muxer.cpp",
    "mpeg_ts_splitter.cpp",
  ]

  configs = [ "$SHARING_ROOT_DIR/tests:coverage_flags" ]

  deps = [
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/extend:sharing_mpeg",
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
  ]

  external_deps = [ "hilog:libhilog" ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
