# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_source_set("sharing_rtcp_srcs") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "include",
    "$SHARING_ROOT_DIR/services",
  ]

  sources = [
    "src/rtcp.cpp",
    "src/rtcp_context.cpp",
  ]

  external_deps = [ "hilog:libhilog" ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
