# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

ohos_shared_library("sharing_rtp") {
  install_enable = true

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "//utils/native/base/include",
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/rtp/include",
  ]

  sources = [
    "$SHARING_ROOT_DIR/services/protocol/frame/aac_frame.cpp",
    "$SHARING_ROOT_DIR/services/protocol/frame/frame.cpp",
    "$SHARING_ROOT_DIR/services/protocol/frame/frame_merger.cpp",
    "$SHARING_ROOT_DIR/services/protocol/frame/h264_frame.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/adts.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_codec_aac.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_codec_g711.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_codec_h264.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_codec_ts.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_factory.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_maker.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_pack_impl.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_packet.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_queue.cpp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/src/rtp_unpack_impl.cpp",
  ]

  configs = [ "$SHARING_ROOT_DIR/tests:coverage_flags" ]

  deps = [
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/protocol/rtcp:sharing_rtcp_srcs",
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
    "//third_party/ffmpeg:libohosffmpeg",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
