# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

config("capture_demo_config") {
  include_dirs = [
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/event",
    "$SHARING_ROOT_DIR/services/mediachannel",
    "$SHARING_ROOT_DIR/services/protocol/rtp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/interfaces",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/frame",
    "$SHARING_ROOT_DIR/services/utils",
    "$SHARING_ROOT_DIR/services/common",
    "$SHARING_ROOT_DIR/services",
    "//utils/native/base/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiocommon/include",
    "//foundation/multimedia/audio_framework/interfaces/inner_api/native/audiorenderer/include",
    "//foundation/multimedia/image_framework/interfaces/innerkits/include",
  ]
}

config("plugin_ffmpeg_adapter_config") {
  include_dirs = [ "//third_party/ffmpeg" ]
}

ohos_executable("sharing_buffer_dispatcher_demo") {
  include_dirs = []
  configs = [
    ":capture_demo_config",
    "$SHARING_ROOT_DIR/services/codec:codec_external_include",
    # "$SHARING_ROOT_DIR/services/windowmgr:window_external_include",
  ]
  public_configs = [ ":plugin_ffmpeg_adapter_config" ]
  public_deps = [ "//third_party/ffmpeg:libohosffmpeg" ]
  include_dirs += [
    "$SHARING_ROOT_DIR/services/codec/include",
    "$SHARING_ROOT_DIR/services/mediaplayer/include",
  ]
  sources = [ "buffer_dispatcher_demo.cpp" ]

  deps = [
    "$SHARING_ROOT_DIR/services:khsharing_service",
    "$SHARING_ROOT_DIR/services/codec:khsharing_codec",
    "$SHARING_ROOT_DIR/services/common:khsharing_common",
    "$SHARING_ROOT_DIR/services/utils:khsharing_utils",
  ]

  external_deps = [
    "graphic_2d:surface",
    "hilog:libhilog",
  ]

  relative_install_dir = "sharing_demo"

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
