# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

group("test_package") {
  deps = [
    ":sharing_network_client_demo",
    ":sharing_network_server_demo",
    ":udp_client_demo",
    ":udp_server_demo",
  ]
}

config("sharing_network_demo_config") {
  include_dirs = [
    "//utils/native/base/include",
    "$SHARING_ROOT_DIR/services",
  ]
}

ohos_executable("sharing_network_server_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":sharing_network_demo_config" ]

  sources = [ "network_server_demo.cpp" ]

  deps = [
    "$SHARING_ROOT_DIR/services:sharing_service",
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/network:sharing_network",
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hilog:libhilog",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}

ohos_executable("sharing_network_client_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":sharing_network_demo_config" ]

  sources = [ "network_client_demo.cpp" ]

  deps = [
    "$SHARING_ROOT_DIR/services/common:sharing_common",
    "$SHARING_ROOT_DIR/services/network:sharing_network",
    "$SHARING_ROOT_DIR/services/utils:sharing_utils",
  ]

  external_deps = [
    "eventhandler:libeventhandler",
    "hilog:libhilog",
  ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}

ohos_executable("udp_client_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "udp_client_demo.cpp" ]

  external_deps = [ "hilog:libhilog" ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}

ohos_executable("udp_server_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "udp_server_demo.cpp" ]

  external_deps = [ "hilog:libhilog" ]

  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
