# Copyright (c) 2023 Shenzhen Kaihong Digital Industry Development Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/CastEngine/castengine_wifi_display/config.gni")

config("sharing_demo_config") {
  include_dirs = [
    "$SHARING_ROOT_DIR/services",
    "$SHARING_ROOT_DIR/services/protocol",
    "$SHARING_ROOT_DIR/services/protocol/rtp",
    "$SHARING_ROOT_DIR/services/protocol/rtp/include",
    "//utils/native/base/include",
  ]
}

ohos_executable("sharing_ts_rtp_dec_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":sharing_demo_config" ]

  sources = [ "ts_rtp_dec_demo.cpp" ]

  deps = [ "$SHARING_ROOT_DIR/services/protocol/rtp:sharing_rtp" ]

  external_deps = [ "hilog:libhilog" ]

  relative_install_dir = "sharing_demo"
  subsystem_name = "castplus"
  part_name = "sharing_framework"
}

ohos_executable("sharing_h264_rtp_dec_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":sharing_demo_config" ]

  sources = [ "h264_rtp_dec_demo.cpp" ]

  deps = [ "$SHARING_ROOT_DIR/services/protocol/rtp:sharing_rtp" ]

  external_deps = [ "hilog:libhilog" ]
  subsystem_name = "castplus"
  part_name = "sharing_framework"
}

ohos_executable("sharing_rtp_enc_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":sharing_demo_config" ]

  sources = [ "rtp_enc_demo.cpp" ]

  deps = [ "$SHARING_ROOT_DIR/services/protocol/rtp:sharing_rtp" ]

  external_deps = [ "hilog:libhilog" ]
  subsystem_name = "castplus"
  part_name = "sharing_framework"
}

ohos_executable("sharing_rtp_dec_demo") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  configs = [ ":sharing_demo_config" ]
  sources = [ "rtp_dec_demo.cpp" ]

  deps = [ "$SHARING_ROOT_DIR/services/protocol/rtp:sharing_rtp" ]

  external_deps = [ "hilog:libhilog" ]
  subsystem_name = "castplus"
  part_name = "sharing_framework"
}
